Bug #13548252: MYSQL ASSUMES ALL ETHERNET DEVICES ARE NAMED ETHX Bug #63055   : mysql assumes all ethernet devices are named ethX

The MySQL server is using the first non-zero hardware address of
an arbitrary network interface for generating UUIDs. On Linux,
the MySQL server is only trying interface names "eth{0-5}". The
patch retrieves the list of known interface names rather than
assuming names of a certain pattern.

Patch contributed by Honza Horak